intro to mie res

--- a/fdphd.bib
+++ b/fdphd.bib
@@ -1108,6 +1108,16 @@ Terahertz spectroscopy of ferroelectrics and related materials
   publisher={AIP Publishing},
   abstract={We show that suitably shaped objects made of a dielectric material can function as electrical resonators for high frequency oscillations. We develop the theory of such resonators very briefly and compute their resonant frequencies and losses in some very simple cases. The paper concludes with an observation on the behavior of dielectric wave guides.}
 }
+@article{mie1908beitrage,
+  title={Beitr{\"a}ge zur Optik tr{\"u}ber Medien, speziell kolloidaler Metall{\"o}sungen},
+  author={Mie, Gustav},
+  journal={Annalen der physik},
+  volume={330},
+  number={3},
+  pages={377--445},
+  year={1908},
+  publisher={Wiley Online Library}
+}
 
 
 @article{peng2007,
